[package]
name = "remote-text-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
base64 = "0.21.0"
git2 = "0.16.1"
pretty_env_logger = "0.4.0"
log = "0.4.17"
rand = "0.8.5"
