[package]
name = "remote-text-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = { version = "8.1.2", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
base64 = "0.21.0"
git2 = "0.16.1"
pretty_env_logger = "0.4.0"
log = "0.4.17"
rand = "0.8.5"
futures = "0.3.27"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.95"

[dev-dependencies]
#serde_json = "1.0.95"
